--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,12 @@
             <version>1.1.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.23</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
@@ -180,7 +186,7 @@
                         <port>9090</port>
                     </httpConnector>
                     <webApp>
-                        <contextPath>/</contextPath>
+                        <contextPath>/thinker</contextPath>
                     </webApp>
                 </configuration>
             </plugin>
@@ -197,7 +203,15 @@
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
-    </plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+        </plugins>
         <finalName>Thinker</finalName>
     </build>
 
