--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,19 @@
             <version>1.1.2</version>
         </dependency>
 
+        <!--redis-->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>2.0.1.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.7.1</version>
+        </dependency>
+
+
     </dependencies>
     <build>
         <plugins>
