--- a/src/main/resources/properties/jdbc.properties
+++ b/src/main/resources/properties/jdbc.properties
@@ -1,4 +1,12 @@
 driverClass=com.mysql.jdbc.Driver
-jdbcUrl=jdbc:mysql://localhost:3306/babasport12?characterEncoding=UTF-8
+jdbcUrl=jdbc:mysql://localhost:3307/orangeshop?characterEncoding=UTF-8
 user=root
 password=root
+redis.hostName=192.168.4.204
+redis.port=6379
+redis.maxActive=10
+redis.maxIdle=20
+redis.maxWaitMillis=1000
+redis.testOnBorrow=true
+redis.passWord=
+
