--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>jimboLix</groupId>
     <artifactId>Thinker</artifactId>
-    <packaging>war</packaging>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>Thinker Maven Webapp</name>
     <url>http://maven.apache.org</url>
@@ -19,6 +19,7 @@
         <org.mybatis-version>3.2.7</org.mybatis-version>
         <org.mybatis-spring-version>1.2.2</org.mybatis-spring-version>
         <cglib-version>2.2.2</cglib-version>
+        <jackson-mapper-asl-version>1.9.12</jackson-mapper-asl-version>
     </properties>
     <dependencies>
         <dependency>
@@ -140,7 +141,21 @@
             <artifactId>mybatis-spring</artifactId>
             <version>${org.mybatis-spring-version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>${jackson-mapper-asl-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-core-asl</artifactId>
+            <version>${jackson-mapper-asl-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.23</version>
+        </dependency>
         <!-- jdbc driver -->
         <dependency>
             <groupId>mysql</groupId>
@@ -169,12 +184,17 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-redis</artifactId>
-            <version>2.0.1.RELEASE</version>
+            <version>1.6.0.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
-            <version>2.7.1</version>
+            <version>2.7.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.1.28</version>
         </dependency>
 
 
@@ -193,7 +213,7 @@
                         <port>9090</port>
                     </httpConnector>
                     <webApp>
-                        <contextPath>/</contextPath>
+                        <contextPath>/thinker</contextPath>
                     </webApp>
                 </configuration>
             </plugin>
@@ -210,8 +230,18 @@
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
-    </plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
         <finalName>Thinker</finalName>
+
     </build>
 
 </project>
